Fix typos in comments and documentation (regarding 'it is') (a cherry-pick of commit 7ce5cbf27 from 'release-7_6')
* ChangeLog (4.3): Fix typo ("it's").
* doc/README.amiga (GC_AMIGA_GC): Likewise.
* extra/AmigaOS.c (GC_amiga_allocwrapper_any): Fix typo in comment
("it's").
* malloc.c (GC_free): Likewise.
* new_hblk.c (GC_build_fl): Likewise.
* os_dep.c [DATASTART_USES_BSDGETDATASTART] (GC_FreeBSDGetDataStart):
Likewise.
* reclaim.c (GC_start_reclaim): Likewise.

--- a/ChangeLog
+++ b/ChangeLog
@@ -8846,7 +8846,7 @@ being collected or finalized.
 the change in the definition of accessibility (by John Ellis).
 * Added support for operator new[] (by John Ellis).  Since most compilers
 don't yet support operator new[], it is conditionalized on
--DOPERATOR_NEW_ARRAY.  The code is untested, but its trivial and looks
+-DOPERATOR_NEW_ARRAY.  The code is untested, but it's trivial and looks
 correct.
 * The test program test_gc_c++ (later renamed test_cpp.cc)
 tries to test for the C++-specific functionality not tested by the
