Update AUTHORS file (add Alexander Ederer and Mario Topf)

--- a/AUTHORS
+++ b/AUTHORS
@@ -33,6 +33,7 @@ Aleksey Demakov <ademakov@gmail.com>
 Alessandro Bruni <alessandro.bruni@gmail.com>
 Alex Ronne Petersen <alexrp@xamarin.com>
 Alexander Belchenko <bialix@ukr.net>
+Alexander Ederer <alexander.ederer@unity3d.com>
 Alexander Gavrilov <angavrilov@gmail.com>
 Alexander Herz <alexander.herz@mytum.de>
 Alexandr Petrosian <paf@design.ru>
@@ -284,6 +285,7 @@ Marcos Dione <Marcos_David.Dione@sophia.inria.fr>
 Marcus Herbert
 Marek Vasut <marex@denx.de>
 Margaret Fleck <mfleck@illinois.edu>
+Mario Topf <mario.topf@unity3d.com>
 Mark Boulter <mboulter@vnet.ibm.com>
 Mark Mitchell <mark@codesourcery.com>
 Mark Reichert <markr@sirs.com>
