--- a/AUTHORS
+++ b/AUTHORS
@@ -285,6 +285,7 @@ Marcos Dione <Marcos_David.Dione@sophia.inria.fr>
 Marcus Herbert
 Marek Vasut <marex@denx.de>
 Margaret Fleck <mfleck@illinois.edu>
+Mario Hoepfner <mario.hopfner@unity3d.com>
 Mario Topf <mario.topf@unity3d.com>
 Mark Boulter <mboulter@vnet.ibm.com>
 Mark Mitchell <mark@codesourcery.com>
