Update AUTHORS file (add Bill Holmes)

--- a/AUTHORS
+++ b/AUTHORS
@@ -78,6 +78,7 @@ Benjamin Lerman <Benjamin.Lerman@ambre.net>
 Bernd Edlinger <bernd.edlinger@hotmail.de>
 Bernd Kuhls <bernd.kuhls@t-online.de>
 Bernie Solomon <bernard@mono-cvs.ximian.com>
+Bill Holmes <bill.holmes@unity3d.com>
 Bill Janssen <janssen@parc.xerox.com>
 Bo Thorsen <bo@berlioz.suse.de>
 Bradley D. LaRonde <brad@ltc.com>
