Update AUTHORS file (add Amaury Sechet)

--- a/AUTHORS
+++ b/AUTHORS
@@ -42,6 +42,7 @@ Alexandre Oliva <aoliva@redhat.com>
 Alexis Laferriere <alexis.laf@xymus.net>
 Alistair G. Crooks <agc@uts.amdahl.com>
 Allan Hsu <allan@counterpop.net>
+Amaury Sechet <deadalnix@gmail.com>
 Andre Leiradella <andre@leiradella.com>
 Andreas Jaeger <aj@suse.de>
 Andreas Tobler <andreastt@gmail.com>
