--- a/AUTHORS
+++ b/AUTHORS
@@ -40,6 +40,7 @@ Alexandr Shadchin <ShadchinAV@mail.ru>
 Alexandre Oliva <aoliva@redhat.com>
 Alistair G. Crooks <agc@uts.amdahl.com>
 Allan Hsu <allan@counterpop.net>
+Amaury Sechet <deadalnix@gmail.com>
 Andre Leiradella <andre@leiradella.com>
 Andreas Jaeger <aj@suse.de>
 Andreas Tobler <andreastt@gmail.com>
