--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,76 @@
+2023-02-28  Ivan Maidanski <ivmai@mail.ru>
+
+	* pthread_support.c (GC_start_rtn_prepare_thread): Fix a typo in
+	comment ("used in").
+
+2023-02-20  Amaury Sechet <deadalnix@gmail.com>
+
+	* docs/scale.html (The Parallel Marking Algorithm): Fix a typo
+	("our approach").
+
+2023-02-12  Ivan Maidanski <ivmai@mail.ru>
+
+	* ChangeLog: Fix a typo ("STATIC").
+
+2023-02-03  Ivan Maidanski <ivmai@mail.ru>
+
+	* os_dep.c [!OS2 && !MSWIN32 && !MSWINCE && !CYGWIN32 && !AMIGA
+	&& !OPENBSD && !PCR && MACOS && !THINK_C && __MWERKS__ && !__POWERPC__
+	&& __option(far_data)] (GC_register_data_segments): Fix typo in
+	comment ("the").
+
+2023-01-28  Ivan Maidanski <ivmai@mail.ru>
+
+	* misc.c (GC_set_oom_fn): Move GC_ASSERT() to be after DCL_LOCK_STATE.
+
+2023-01-17  Ivan Maidanski <ivmai@mail.ru>
+
+	* doc/README.Changes (4.3): Fix typo ("it's").
+	* doc/README.amiga (GC_AMIGA_GC): Likewise.
+	* extra/AmigaOS.c (GC_amiga_allocwrapper_any): Fix typo in comment
+	("it's").
+	* malloc.c (GC_free): Likewise.
+	* new_hblk.c (GC_build_fl): Likewise.
+	* os_dep.c (GC_FreeBSDGetDataStart): Likewise.
+	* reclaim.c (GC_start_reclaim): Likewise.
+
+2023-01-17  Ivan Maidanski <ivmai@mail.ru>
+
+	* pthread_support.c [CAN_HANDLE_FORK && (GC_DARWIN_THREADS
+	|| THREAD_LOCAL_ALLOC && !USE_CUSTOM_SPECIFIC)]
+	(GC_remove_all_threads_but_me): Rename GC_free_internal to
+	GC_free_inner in comments.
+	* win32_threads.c [CAN_HANDLE_FORK && THREAD_LOCAL_ALLOC
+	&& !USE_CUSTOM_SPECIFIC] (GC_remove_all_threads_but_me): Likewise.
+
+2023-01-03  Ivan Maidanski <ivmai@mail.ru>
+
+	* tests/test.c [DBG_HDRS_ALL] (run_one_test): Set y to fail_proc1
+	right before its use; call CHECK_OUT_OF_MEMORY() before each GC_size()
+	invocation; call CHECK_OUT_OF_MEMORY() before GC_base().
+
+2023-01-03  Ivan Maidanski <ivmai@mail.ru>
+
+	* ChangeLog: Fix typo ("GC_allochblk_nth").
+	* include/private/gc_priv.h (GC_alloc_large): Fix typo in comment
+	("GC_allochblk_nth").
+
+2022-12-30  Ivan Maidanski <ivmai@mail.ru>
+
+	* pthread_support.c [NACL] (GC_delete_thread): Do not call
+	GC_nacl_shutdown_gc_thread() and do not clear GC_nacl_gc_thread_self.
+	* pthread_support.c [NACL] (GC_unregister_my_thread_inner): Call
+	GC_nacl_shutdown_gc_thread() and clear value of GC_nacl_gc_thread_self
+	(after GC_destroy_thread_local).
+	* pthread_support.c [NACL] (GC_register_my_thread): If KNOWN_FINISHED
+	then set GC_nacl_gc_thread_self to me and call
+	GC_nacl_initialize_gc_thread().
+
+2022-12-01  Ivan Maidanski <ivmai@mail.ru>
+
+	* pthread_start.c [GC_PTHREADS && !GC_WIN32_THREADS && NACL]
+	(GC_pthread_start_inner): Call GC_thread_exit_proc(me) before return.
+
 2022-11-13  Ivan Maidanski <ivmai@mail.ru>
 
 	* pthread_support.c [PARALLEL_MARK]
