Fix description of client promise for IGNORE_OFF_PAGE allocated objects (a cherry-pick of commit 441698c68 from 'master')
The client should keep a pointer within the first heap block for such
an allocated object.  Previously, it was mentioned in the documentation
and comments that such a pointer should be within the first 256 or 512
bytes.

* README.md (The C Interface to the Allocator): Fix the description
(comment) of GC_malloc_ignore_off_page (the client promises to keep
a pointer within the first hblk of the object instead of 256 or 512
bytes, or a page).
* docs/gcinterface.md (GC_MALLOC_IGNORE_OFF_PAGE): Likewise.
* gc.man (GC_malloc_atomic_ignore_off_page): Likewise.
* include/gc.h (GC_malloc_ignore_off_page): Likewise.
* include/gc_mark.h (GC_generic_malloc_ignore_off_page): Likewise.
* include/private/gc_priv.h (IGNORE_OFF_PAGE): Likewise.
* include/private/gc_priv.h [DBG_HDRS_ALL || GC_GCJ_SUPPORT
|| !GC_NO_FINALIZATION] (GC_generic_malloc_inner_ignore_off_page):
Likewise.
* malloc.c [DBG_HDRS_ALL || GC_GCJ_SUPPORT || !GC_NO_FINALIZATION]
(GC_generic_malloc_inner_ignore_off_page): Likewise.
* include/gc_gcj.h (GC_gcj_malloc_ignore_off_page): Refine comment.

--- a/doc/gc.man
+++ b/doc/gc.man
@@ -90,7 +90,7 @@ and
 .I
 GC_malloc_atomic_ignore_off_page
 inform the collector that the client code will always maintain a pointer to
-near the beginning of the object (within the first 512 bytes), and that
+near the beginning (i.e. within the first heap block) of the object, and that
 pointers beyond that can be ignored by the collector.  This makes it much
 easier for the collector to place large objects.  These are recommended for
 large object allocation.  (Objects expected to be > ~100 KB should be
